feat: add Nunjucks template engine for multiple pages

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "webpack-html-scss-boilerplate",
-  "version": "0.1.0",
-  "description": "Webpack boilerplate for multipage sites using HTML, SCSS, JS",
+  "version": "1.1.0",
+  "description": "Webpack boilerplate for multiple pages using Webpack, HTML templates, SCSS, JS",
   "keywords": [
     "webpack",
     "boilerplate",
     "starter",
     "html",
+    "template",
+    "nunjucks",
     "js",
     "css",
     "scss",
@@ -35,21 +37,20 @@
     "preview": "npm run build && http-server dist --port 4321 -o",
     "test": "echo 'No test specified' && exit 1"
   },
-  "dependencies": {
-  },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "css-loader": "^6.7.3",
     "cssnano": "^5.1.14",
-    "html-bundler-webpack-plugin": "^0.3.0",
+    "html-bundler-webpack-plugin": "^0.10.1",
     "http-server": "^14.1.1",
     "material-icons": "^1.13.1",
-    "material-symbols": "^0.4.2",
+    "material-symbols": "^0.4.4",
     "normalize.css": "^8.0.1",
+    "nunjucks": "^3.2.3",
     "postcss-loader": "^7.0.2",
-    "prettier": "^2.8.3",
-    "sass": "^1.57.1",
+    "prettier": "^2.8.4",
+    "sass": "^1.58.0",
     "sass-loader": "^13.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
