--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-html-scss-boilerplate",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Webpack boilerplate for multiple pages using Webpack, HTML templates, SCSS, JS",
   "keywords": [
     "webpack",
@@ -38,23 +38,22 @@
     "test": "echo 'No test specified' && exit 1"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
     "css-loader": "^6.8.1",
-    "cssnano": "^6.0.1",
-    "html-bundler-webpack-plugin": "^2.4.0",
+    "cssnano": "^6.0.2",
+    "html-bundler-webpack-plugin": "^3.4.4",
     "http-server": "^14.1.1",
-    "material-icons": "^1.13.9",
-    "material-symbols": "^0.10.2",
+    "material-icons": "^1.13.12",
+    "material-symbols": "^0.14.3",
     "normalize.css": "^8.0.1",
     "nunjucks": "^3.2.4",
-    "postcss-loader": "^7.3.3",
-    "prettier": "^3.0.0",
-    "sass": "^1.64.1",
-    "sass-loader": "^13.3.2",
-    "webpack": "^5.88.2",
+    "postcss-loader": "^7.3.4",
+    "prettier": "^3.1.1",
+    "sass": "^1.69.6",
+    "sass-loader": "^13.3.3",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.9.0"
+    "webpack-dev-server": "^4.15.1"
   }
 }
